--- a/index.html
+++ b/index.html
@@ -23,20 +23,18 @@ and open the template in the editor.
         <div id="header" class="container-full fixed">
             <nav>
                 <ul>
-                    <li><a>首页</a></li>
-                    <li><a>首页</a></li>
-                    <li><a>首页</a></li>
-                    <li><a>首页</a></li>
+                    <li><a href="/">首页</a></li>
+                    <li><a href="project.html">项目列表</a></li>
+                    <li><a href="canvas.html">商业画布</a></li>
+                    <li><a href="about.html">关于</a></li>
                 </ul>
             </nav>
 
         </div>
         <div id="content" class="container">
-            <p>HELLLO</p>
-            <p>HELLLO</p><p>HELLLO</p><p>HELLLO</p><p>HELLLO</p><p>HELLLO</p>
-            <p>HELLLO</p><p>HELLLO</p><p>HELLLO</p>
-            <p>HELLLO</p><p>HELLLO</p><p>HELLLO</p>
-            <p>HELLLO</p><p>HELLLO</p><p>HELLLO</p>
+            <ul>
+                <li></li>
+            </ul>
         </div>
     </body>
 </html>
